swagger update + deleted unused code snippets
